su ket thuc cua dev truong nguyen

--- a/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
+++ b/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
@@ -129,15 +129,21 @@
                                     else if (userRole == "DealerManager")
                                     {
                                         <li>
-                                            <a class="dropdown-item" asp-page="/Manager/Employees">
+                                            <a class="dropdown-item" asp-page="/Manager/ManagerStaff">
                                                 <i class="bi bi-person-badge me-2"></i>
-                                                Manage Employees
+                                                Manage Staffs
                                             </a>
                                         </li>
                                         <li>
                                             <a class="dropdown-item" asp-page="/Vehicle/Index">
                                                 <i class="fa-solid fa-car me-2"></i>
                                                 Manage Vehicles
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-page="/Manager/ManageFeedback">
+                                                <i class="fa-solid fa-car me-2"></i>
+                                                Manage Feedbacks
                                             </a>
                                         </li>
                                         <li>
